projects/metis/deployment/acceptance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: metis-ui-deployment-acceptance
  name: metis-ui-deployment-acceptance
spec:
  selector:
    matchLabels:
      app: metis-ui-acceptance
  template:
    metadata:
      labels:
        app: metis-ui-acceptance
    spec:
      containers:
        - image: ${APP_IMAGE}
          name: container
          volumeMounts:
            - name: metis-ui-nginx-config-volume
              mountPath: "/etc/nginx/nginx.conf"
              subPath: "nginx.conf"
              readOnly: true
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 30m
              memory: 50M
            limits:
              cpu: 30m
              memory: 50M
      volumes:
        - name: metis-ui-nginx-config-volume
          configMap:
            name: metis-ui-nginx-conf-acceptance
