projects/metis/deployment/acceptance/metis-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metis-ui-service-acceptance
  name: metis-ui-service-acceptance
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: metis-ui-acceptance
  type: ClusterIP
