projects/metis/deployment/acceptance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metis-ui-ingress-acceptance
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metis-ui-service-acceptance
                port:
                  number: 8080
